# ai-agent-orchestrator

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_IDEAS.md  README.md  docker-compose.yml  verify.sh
backend/: .env.example  Cargo.toml  Dockerfile  README.md  sqlx-data.json
backend/migrations/: 000001_init.sql  001_initial_schema.sql  20240101000001_create_tasks_table.sql
backend/src/: agent_service.rs  auth.rs  config.rs  db.rs  error.rs  errors.rs  handlers.rs  integration_test.rs  lib.rs  llm_service.rs  main.rs  middleware.rs  models.rs  search.rs  task_service.rs  ws.rs
backend/src/api/: mod.rs
backend/src/db/: migrator.rs  mod.rs  repository.rs  tasks.rs
backend/src/db/migrations/: 001_init.sql
backend/src/handlers/: agent_handlers.rs  auth.rs  execution_handlers.rs  mod.rs  snippets.rs  system_handlers.rs  task_handlers.rs
backend/src/services/: agent_client.rs  executor.rs  llm.rs
backend/src/test/: mod.rs
backend/tests/integration/: test_tasks.rs
docs/: PRODUCTION.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  store.ts  types.ts
frontend/src/components/: CodeEditor.tsx  Layout.tsx  Navigation.tsx  Sidebar.tsx  SnippetCard.tsx  TaskForm.test.tsx  TaskForm.tsx  TaskItem.tsx
frontend/src/context/: TaskContext.tsx
frontend/src/pages/: Agents.tsx  Analytics.tsx  CreateSnippet.tsx  Dashboard.tsx  Executions.tsx  Login.tsx  Search.tsx  SnippetDetail.tsx  Snippets.tsx  TaskDetail.tsx  Tasks.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/store/: useStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
memory/: heartbeat-state.json
nginx/: nginx.conf
scripts/: setup.sh  test.sh
