[package]
name = "ai-agent-orchestrator"
version = "1.0.0"
edition = "2021"
description = "Production-ready meta-system that unifies all AI capabilities into a collaborative multi-agent framework"
authors = ["Eon <eon@eonhermes.com>"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "multipart", "headers"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression"] }
hyper = "0.14"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
r2d2 = "0.8"
r2d2_sqlite = "0.21"
deadpool-sqlite = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Authentication & Security
jsonwebtoken = "8.4"
ring = "0.17"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.4", features = ["v4", "serde"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Logging & Error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
futures = "0.3"
once_cell = "1.18"
paste = "1.0"

[dev-dependencies]
tower-test = "0.4"
http-body-util = "0.1"
test-context = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[workspace]
members = ["."]
